# agent-mainframe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_THINKING_DETECTION.md  Cargo.toml  FEATURE_IDEAS.md  PERFORMANCE_PLAN.md  README.md  STEERING_COACH_SPEC.md  custom-diff-review-implementation-plan.md
.amf/: change-history.json  config.json  steering.json
.claude/: .gitignore  notes.md  settings.json  settings.local.json
.claude/commands/: build.md  check.md  lint.md
.github/workflows/: main.yml  release.yml
.opencode/: opencode.json
.opencode/plugins/: change-tracker.js  diff-review.js  diff-review.sh  diff-review.ts  explain.sh  feedback-prompt.sh  input-request.js  sidebar-state.js
.opencode/themes/: README.md  amf-catppuccin.json  amf-tokyonight.json  amf.json
docs/: claude-sidebar-plan.md  codex-sidebar-plan.md  language-and-tui-comparison.md  opencode-sidebar-plan.md  syntax-highlighting-research-plan.md  tsx-syntax-test.tsx
docs/automation/: README.md  create-batch-features.example.json  create-batch-features.template.json  create-feature.example.json  create-feature.template.json  create-project.example.json  create-project.template.json
docs/syntax-tests/: README.md  syntax-test-2.c  syntax-test-2.cpp  syntax-test-2.css  syntax-test-2.go  (+15 more)
scripts/: clear-notify.sh  codex-diff-review.sh  codex-notify.sh  generate-amf-themes.js  generate-amf-themes.sh  notify.sh  package-no-tmux-test-bundle.sh  package-release-bundle.sh  release.sh  save-prompt.sh  set-session-status.sh  test-thinking.sh  thinking-start.sh  thinking-stop.sh  tool-start.sh  tool-stop.sh
src/: app.rs  automation.rs  claude.rs  codex.rs  debug.rs  diff.rs  editor.rs  extension.rs  http_client.rs  ipc.rs  main.rs  markdown.rs  perf.rs  pi.rs  project.rs  steering_config.rs  summary.rs  theme.rs  tmux.rs  token_tracking.rs  traits.rs  transcript.rs  upgrade.rs  usage.rs  worktree.rs
themes/: README.md
(+105 files in other folders)
