[package]
name = "claude-super-vibeless"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "csv"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
