[package]
name = "agent-mainframe"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "amf"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
throbber-widgets-tui = "0.8"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
vt100 = "0.15"
ratatui-explorer = "0.2"
ureq = "3"
unicode-width = "0.1"
regex = "1"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
pretty_assertions = "1"
